--- a/SkillConfig.json
+++ b/SkillConfig.json
@@ -3,6 +3,7 @@
     "id": 1,
     "weaponId": "N/A",
     "name": "Attack Bonus",
+    "Icon": "atkup",
     "description": "Increase attack by %para1 .",
     "type": "Basic",
     "level": 0,
@@ -12,6 +13,7 @@
     "id": 2,
     "weaponId": "N/A",
     "name": "Speed Bonus",
+    "Icon": "speedup",
     "description": "Increase movement speed by %para1 .",
     "type": "Basic",
     "level": 0,
@@ -21,6 +23,7 @@
     "id": 3,
     "weaponId": "N/A",
     "name": "Health Bonus",
+    "Icon": "hpbonus",
     "description": "Increase max HP by %para1 .",
     "type": "Basic",
     "level": 0,
@@ -30,6 +33,7 @@
     "id": 4,
     "weaponId": "N/A",
     "name": "Critical Chance Bonus",
+    "Icon": "critchance",
     "description": "Increase critical chance by %para1 .",
     "type": "Basic",
     "level": 0,
@@ -39,6 +43,7 @@
     "id": 5,
     "weaponId": "N/A",
     "name": "Critical Damage Bonus",
+    "Icon": "critdmg",
     "description": "Increase critical damage by %para1 .",
     "type": "Basic",
     "level": 0,
@@ -48,6 +53,7 @@
     "id": 6,
     "weaponId": "N/A",
     "name": "Attack Speed Bonus",
+    "Icon": "aspeed",
     "description": "Increase attack speed by %para1 .",
     "type": "Basic",
     "level": 0,
@@ -57,6 +63,7 @@
     "id": 7,
     "weaponId": "N/A",
     "name": "Berserk",
+    "Icon": "berserk",
     "description": "Gain attack speed based on HP lost (cap at %para2 HP).",
     "type": "Neutral",
     "level": 1,
@@ -93,12 +100,13 @@
     "para3": 0.01429,
     "para4": 0,
     "para5": 0.3,
-    "para6": 10
+    "para6": 5
   },
   {
     "id": 10,
     "weaponId": "N/A",
     "name": "Vampirism",
+    "Icon": "vampirism",
     "description": "Attacking heal for %para1 damage dealt.",
     "type": "Neutral",
     "level": 1,
@@ -123,12 +131,13 @@
     "type": "Neutral",
     "level": 3,
     "para1": 0.5,
-    "para2": 100
+    "para2": 0.5
   },
   {
     "id": 13,
     "weaponId": "N/A",
     "name": "Ignite",
+    "Icon": "burn",
     "description": "Attacking burns the enemies for %para2 attack damage over time.",
     "type": "Neutral",
     "level": 1,
@@ -165,6 +174,7 @@
     "id": 16,
     "weaponId": "N/A",
     "name": "Chilling Touch",
+    "Icon": "ice",
     "description": "Attacking slows enemies by %para2 .",
     "type": "Neutral",
     "level": 1,
@@ -207,10 +217,11 @@
     "id": 19,
     "weaponId": "N/A",
     "name": "Knockback",
+    "Icon": "knockback",
     "description": "Attacks slightly knockback enemies.",
     "type": "Neutral",
     "level": 1,
-    "para1": 1,
+    "para1": 0.5,
     "para2": 0,
     "para3": 0
   },
@@ -221,7 +232,7 @@
     "description": "Attacks moderately knockback enemies.",
     "type": "Neutral",
     "level": 2,
-    "para1": 1.5,
+    "para1": 0.8,
     "para2": 0,
     "para3": 0
   },
@@ -232,7 +243,7 @@
     "description": "Attacks greatly knockback enemies.",
     "type": "Neutral",
     "level": 3,
-    "para1": 2,
+    "para1": 1,
     "para2": 0.2,
     "para3": 0.5
   },
@@ -240,6 +251,7 @@
     "id": 22,
     "weaponId": "N/A",
     "name": "Blazing Trail",
+    "Icon": "blazetrail",
     "description": "Upon dashing, leave a fiery trail that deals %para2 attack damage per second.",
     "type": "Neutral",
     "level": 1,
@@ -276,6 +288,7 @@
     "id": 25,
     "weaponId": "N/A",
     "name": "Dash Stack +",
+    "Icon": "dashstack",
     "description": "Gain <para1 stacks of dash.",
     "type": "Neutral",
     "level": 1,
@@ -309,6 +322,7 @@
     "id": 28,
     "weaponId": "N/A",
     "name": "Dash Deflect",
+    "Icon": "dashdeflect",
     "description": "Dashing deflects projectiles that deal %para1 their original damage.",
     "type": "Neutral",
     "level": 1,
@@ -345,6 +359,7 @@
     "id": 31,
     "weaponId": "N/A",
     "name": "Dash Shockwave",
+    "Icon": "shockwave",
     "description": "Dashing slightly knockbacks enemies in the way.",
     "type": "Neutral",
     "level": 1,
@@ -378,12 +393,14 @@
     "id": 34,
     "weaponId": "N/A",
     "name": "Conquest Smite",
+    "Icon": "smite",
     "description": "Attacking inflicts Conquest stack that deal damage on detonatio.",
     "type": "Neutral",
     "level": 1,
     "para1": 2,
     "para2": 1,
-    "para3": 0
+    "para3": 0,
+    "para4": 0
   },
   {
     "id": 35,
@@ -394,7 +411,8 @@
     "level": 2,
     "para1": 2,
     "para2": 1.5,
-    "para3": 0
+    "para3": 0,
+    "para4": 0
   },
   {
     "id": 36,
@@ -404,45 +422,64 @@
     "type": "Neutral",
     "level": 3,
     "para1": 2,
-    "para2": 2.5
+    "para2": 2.5,
+    "para3": 3,
+    "para4": 1
   },
   {
     "id": 37,
     "weaponId": "N/A",
-    "name": "Multishot",
+    "name": "Multistrike",
+    "Icon": "multistrike",
     "description": "Fire <para1 more times each attack.",
-    "type": "Ranged",
+    "type": "Neutral",
     "level": 1,
     "para1": 1,
     "para2": 0.35,
-    "para3": 0.2
+    "para3": 0.2,
+    "para4": 0,
+    "para6": 35,
+    "para7": 22.75,
+    "para10": 57.75
   },
   {
     "id": 38,
     "weaponId": "N/A",
-    "name": "Multishot",
+    "name": "Multistrike",
     "description": "Fire <para1 more times each attack.",
-    "type": "Ranged",
+    "type": "Neutral",
     "level": 2,
     "para1": 2,
     "para2": 0.25,
-    "para3": 0.15
+    "para3": 0.15,
+    "para4": 0,
+    "para6": 35,
+    "para7": 26.25,
+    "para8": 19.6875,
+    "para10": 80.9375
   },
   {
     "id": 39,
     "weaponId": "N/A",
-    "name": "Multishot",
+    "name": "Multistrike",
     "description": "Fire <para1 more times each attack.",
-    "type": "Ranged",
+    "type": "Neutral",
     "level": 3,
     "para1": 3,
     "para2": 0.1,
-    "para3": 0.1
+    "para3": 0.1,
+    "para4": 1,
+    "para6": 35,
+    "para7": 31.5,
+    "para8": 28.35,
+    "para9": 51.03,
+    "para10": 145.88
   },
   {
     "id": 40,
     "weaponId": "N/A",
     "name": "Ricochet",
+    "Icon": "ricochet",
     "description": "Projectiles bounce to <para1 more enemies.",
     "type": "Ranged",
     "level": 1,
@@ -473,6 +510,7 @@
     "id": 43,
     "weaponId": "N/A",
     "name": "Piercing",
+    "Icon": "pierce",
     "description": "Projectiles pierce through <para1 enemy.",
     "type": "Ranged",
     "level": 1,
@@ -503,6 +541,7 @@
     "id": 46,
     "weaponId": "N/A",
     "name": "Chain Lightning",
+    "Icon": "lightningchain",
     "description": "Hitting the enemy releases lightning that deals damage to <para1 enemies with a chance to stun.",
     "type": "Ranged",
     "level": 1,
@@ -542,6 +581,7 @@
     "id": 49,
     "weaponId": "N/A",
     "name": "Projectile Up",
+    "Icon": "projectile",
     "description": "Fire <para1 more projectile.",
     "type": "Ranged",
     "level": 1,
@@ -572,6 +612,7 @@
     "id": 52,
     "weaponId": "N/A",
     "name": "Wall Bounce",
+    "Icon": "wallbounce",
     "description": "Projectiles bounce off walls <para1 time.",
     "type": "Ranged",
     "level": 1,
@@ -599,6 +640,7 @@
     "id": 55,
     "weaponId": "N/A",
     "name": "Deflect",
+    "Icon": "deflect",
     "description": "Attacking deflects projectiles that deal %para1 their original damage.",
     "type": "Melee",
     "level": 1,
@@ -626,6 +668,7 @@
     "id": 58,
     "weaponId": "N/A",
     "name": "Long Reach",
+    "Icon": "longreach",
     "description": "Slightly increase attack range.",
     "type": "Melee",
     "level": 1,
@@ -653,6 +696,7 @@
     "id": 61,
     "weaponId": "N/A",
     "name": "Momentum",
+    "Icon": "momentum",
     "description": "Dashing increases attack by %para2 (max <para1 stacks).",
     "type": "Melee",
     "level": 1,
@@ -686,6 +730,7 @@
     "id": 64,
     "weaponId": "N/A",
     "name": "Rage",
+    "Icon": "rage",
     "description": "Increase attack by %para2 per attack (max <para1 stacks).",
     "type": "Melee",
     "level": 1,
