--- a/SkillConfig.json
+++ b/SkillConfig.json
@@ -3,7 +3,7 @@
     "id": 1,
     "weaponId": "N/A",
     "name": "Attack Bonus",
-    "Icon": "atkup",
+    "icon": "atkup",
     "description": "Increase attack by %para1 .",
     "type": "Basic",
     "level": 0,
@@ -13,7 +13,7 @@
     "id": 2,
     "weaponId": "N/A",
     "name": "Speed Bonus",
-    "Icon": "speedup",
+    "icon": "speedup",
     "description": "Increase movement speed by %para1 .",
     "type": "Basic",
     "level": 0,
@@ -23,7 +23,7 @@
     "id": 3,
     "weaponId": "N/A",
     "name": "Health Bonus",
-    "Icon": "hpbonus",
+    "icon": "hpbonus",
     "description": "Increase max HP by %para1 .",
     "type": "Basic",
     "level": 0,
@@ -33,7 +33,7 @@
     "id": 4,
     "weaponId": "N/A",
     "name": "Critical Chance Bonus",
-    "Icon": "critchance",
+    "icon": "critchance",
     "description": "Increase critical chance by %para1 .",
     "type": "Basic",
     "level": 0,
@@ -43,7 +43,7 @@
     "id": 5,
     "weaponId": "N/A",
     "name": "Critical Damage Bonus",
-    "Icon": "critdmg",
+    "icon": "critdmg",
     "description": "Increase critical damage by %para1 .",
     "type": "Basic",
     "level": 0,
@@ -53,7 +53,7 @@
     "id": 6,
     "weaponId": "N/A",
     "name": "Attack Speed Bonus",
-    "Icon": "aspeed",
+    "icon": "aspeed",
     "description": "Increase attack speed by %para1 .",
     "type": "Basic",
     "level": 0,
@@ -63,7 +63,7 @@
     "id": 7,
     "weaponId": "N/A",
     "name": "Berserk",
-    "Icon": "berserk",
+    "icon": "berserk",
     "description": "Gain attack speed based on HP lost (cap at %para2 HP).",
     "type": "Neutral",
     "level": 1,
@@ -106,7 +106,7 @@
     "id": 10,
     "weaponId": "N/A",
     "name": "Vampirism",
-    "Icon": "vampirism",
+    "icon": "vampirism",
     "description": "Attacking heal for %para1 damage dealt.",
     "type": "Neutral",
     "level": 1,
@@ -137,7 +137,7 @@
     "id": 13,
     "weaponId": "N/A",
     "name": "Ignite",
-    "Icon": "burn",
+    "icon": "burn",
     "description": "Attacking burns the enemies for %para2 attack damage over time.",
     "type": "Neutral",
     "level": 1,
@@ -174,7 +174,7 @@
     "id": 16,
     "weaponId": "N/A",
     "name": "Chilling Touch",
-    "Icon": "ice",
+    "icon": "ice",
     "description": "Attacking slows enemies by %para2 .",
     "type": "Neutral",
     "level": 1,
@@ -217,7 +217,7 @@
     "id": 19,
     "weaponId": "N/A",
     "name": "Knockback",
-    "Icon": "knockback",
+    "icon": "knockback",
     "description": "Attacks slightly knockback enemies.",
     "type": "Neutral",
     "level": 1,
@@ -251,7 +251,7 @@
     "id": 22,
     "weaponId": "N/A",
     "name": "Blazing Trail",
-    "Icon": "blazetrail",
+    "icon": "blazetrail",
     "description": "Upon dashing, leave a fiery trail that deals %para2 attack damage per second.",
     "type": "Neutral",
     "level": 1,
@@ -288,7 +288,7 @@
     "id": 25,
     "weaponId": "N/A",
     "name": "Dash Stack +",
-    "Icon": "dashstack",
+    "icon": "dashstack",
     "description": "Gain <para1 stacks of dash.",
     "type": "Neutral",
     "level": 1,
@@ -322,7 +322,7 @@
     "id": 28,
     "weaponId": "N/A",
     "name": "Dash Deflect",
-    "Icon": "dashdeflect",
+    "icon": "dashdeflect",
     "description": "Dashing deflects projectiles that deal %para1 their original damage.",
     "type": "Neutral",
     "level": 1,
@@ -359,7 +359,7 @@
     "id": 31,
     "weaponId": "N/A",
     "name": "Dash Shockwave",
-    "Icon": "shockwave",
+    "icon": "shockwave",
     "description": "Dashing slightly knockbacks enemies in the way.",
     "type": "Neutral",
     "level": 1,
@@ -393,7 +393,7 @@
     "id": 34,
     "weaponId": "N/A",
     "name": "Conquest Smite",
-    "Icon": "smite",
+    "icon": "smite",
     "description": "Attacking inflicts Conquest stack that deal damage on detonatio.",
     "type": "Neutral",
     "level": 1,
@@ -430,7 +430,7 @@
     "id": 37,
     "weaponId": "N/A",
     "name": "Multistrike",
-    "Icon": "multistrike",
+    "icon": "multistrike",
     "description": "Fire <para1 more times each attack.",
     "type": "Neutral",
     "level": 1,
@@ -479,12 +479,13 @@
     "id": 40,
     "weaponId": "N/A",
     "name": "Ricochet",
-    "Icon": "ricochet",
+    "icon": "ricochet",
     "description": "Projectiles bounce to <para1 more enemies.",
     "type": "Ranged",
     "level": 1,
     "para1": 2,
-    "para2": 0.45
+    "para2": 0.45,
+    "para3": 0
   },
   {
     "id": 41,
@@ -494,7 +495,8 @@
     "type": "Ranged",
     "level": 2,
     "para1": 3,
-    "para2": 0.3
+    "para2": 0.3,
+    "para3": 0
   },
   {
     "id": 42,
@@ -504,13 +506,15 @@
     "type": "Ranged",
     "level": 3,
     "para1": 5,
-    "para2": 0.13
+    "para2": 0.13,
+    "para3": 0.3,
+    "para4": 3
   },
   {
     "id": 43,
     "weaponId": "N/A",
     "name": "Piercing",
-    "Icon": "pierce",
+    "icon": "pierce",
     "description": "Projectiles pierce through <para1 enemy.",
     "type": "Ranged",
     "level": 1,
@@ -541,7 +545,7 @@
     "id": 46,
     "weaponId": "N/A",
     "name": "Chain Lightning",
-    "Icon": "lightningchain",
+    "icon": "lightningchain",
     "description": "Hitting the enemy releases lightning that deals damage to <para1 enemies with a chance to stun.",
     "type": "Ranged",
     "level": 1,
@@ -581,7 +585,7 @@
     "id": 49,
     "weaponId": "N/A",
     "name": "Projectile Up",
-    "Icon": "projectile",
+    "icon": "projectile",
     "description": "Fire <para1 more projectile.",
     "type": "Ranged",
     "level": 1,
@@ -612,7 +616,7 @@
     "id": 52,
     "weaponId": "N/A",
     "name": "Wall Bounce",
-    "Icon": "wallbounce",
+    "icon": "wallbounce",
     "description": "Projectiles bounce off walls <para1 time.",
     "type": "Ranged",
     "level": 1,
@@ -640,7 +644,7 @@
     "id": 55,
     "weaponId": "N/A",
     "name": "Deflect",
-    "Icon": "deflect",
+    "icon": "deflect",
     "description": "Attacking deflects projectiles that deal %para1 their original damage.",
     "type": "Melee",
     "level": 1,
@@ -668,7 +672,7 @@
     "id": 58,
     "weaponId": "N/A",
     "name": "Long Reach",
-    "Icon": "longreach",
+    "icon": "longreach",
     "description": "Slightly increase attack range.",
     "type": "Melee",
     "level": 1,
@@ -696,7 +700,7 @@
     "id": 61,
     "weaponId": "N/A",
     "name": "Momentum",
-    "Icon": "momentum",
+    "icon": "momentum",
     "description": "Dashing increases attack by %para2 (max <para1 stacks).",
     "type": "Melee",
     "level": 1,
@@ -730,7 +734,7 @@
     "id": 64,
     "weaponId": "N/A",
     "name": "Rage",
-    "Icon": "rage",
+    "icon": "rage",
     "description": "Increase attack by %para2 per attack (max <para1 stacks).",
     "type": "Melee",
     "level": 1,
