--- a/SkillConfig.json
+++ b/SkillConfig.json
@@ -368,7 +368,8 @@
     "level": 1,
     "para1": 1.5,
     "para2": 3,
-    "para3": 0
+    "para3": 2,
+    "para4": 0
   },
   {
     "id": 32,
@@ -379,7 +380,8 @@
     "level": 2,
     "para1": 2,
     "para2": 3.5,
-    "para3": 0
+    "para3": 2,
+    "para4": 0
   },
   {
     "id": 33,
@@ -390,7 +392,8 @@
     "level": 3,
     "para1": 2.5,
     "para2": 5,
-    "para3": 2
+    "para3": 2,
+    "para4": 2
   },
   {
     "id": 34,
