--- a/projectile.json
+++ b/projectile.json
@@ -34,21 +34,21 @@
     "type": "Straight",
     "model": "Weapon/FireArrow",
     "livetime": 900,
-    "bouncingwalltimes": 3,
-    "speedbullet": 12,
+    "bouncingwalltimes": 2,
+    "speedbullet": 10,
     "modelSize": 1.5,
     "collisionSize": 1.5
   },
   {
     "id": 4,
     "name": "Explode projectile",
-    "type": "CurveProjectile",
-    "model": "Weapon/Bomb",
-    "explosion": 6,
-    "livetime": 30,
-    "ignorewhencollidewithhero": true,
-    "ignoredamagetohero": true,
-    "speedbullet": 6,
+    "type": "StandExplosion",
+    "model": "Weapon/SwordSlash2",
+    "explosion": 0,
+    "livetime": 0.1,
+    "ignorewhencollidewithhero": false,
+    "ignoredamagetohero": false,
+    "speedbullet": 0,
     "modelSize": 0.5,
     "collisionSize": 0.5
   },
